# federated-learning

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cleanup.py  config.json  manager.py  model.py  pyproject.toml  测试报告.md  设计文档.md
config/: centralized.json  centralized.yaml  decentralized.yaml  ring.json
core/: client.py  communicator.py  ring_node.py  server.py
doc/: configuration.md  core-workflow.md  data-preparation.md  monitoring.md  overview.md  ring-mode.md  testing-and-development.md
docs/: architecture.md  configuration.md  testing.md  tutorial.md
plan/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.example.toml
plan/config/: default.yaml
plan/docs/: architecture.md  collaboration.md  config.md  extensions.md  file-structure.md  interfaces.md  monitoring.md  protocol.md  requirements.md
presentation/: 展示主旨与讲稿.md  技术报告.md
presentation/slides/: main.tex
scripts/: download_datasets.py  prepare_mnist.py  run_client.py  run_fed.py  run_p2p_node.py  run_server.py  split_dataset.py
src/: __init__.py
src/client/: __init__.py  base.py  evaluator.py  federated_client.py  trainer.py
src/core/: __init__.py  exceptions.py  interfaces.py  types.py
src/data/: __init__.py  dataset.py  loader.py  partitioner.py
src/model/: __init__.py  base.py  registry.py  simple_cnn.py
src/p2p/: __init__.py  failure_detector.py  recovery.py  ring_node.py  topology.py
src/protocol/: __init__.py  codec.py  constants.py  message.py  serializer.py
src/server/: __init__.py  aggregator.py  base.py  checkpoint.py  client_manager.py  federated_server.py  round_coordinator.py
src/transport/: __init__.py  connection.py  listener.py  timeout.py
src/utils/: __init__.py  config_loader.py  early_stopping.py  logger.py  metrics.py  timer.py  visualizer.py
tests/: conftest.py  test_pipeline.py  test_tcp_smoke.py
tests/integration/: test_centralized.py  test_client_server.py  test_data_preparation.py  test_decentralized.py
tests/unit/: test_aggregator.py  test_base_server.py  test_client.py  test_client_extended.py  test_config.py  test_data.py  test_early_stopping.py  test_exceptions.py  test_federated_client.py  test_federated_server.py  test_model.py  test_model_and_data.py  test_monitor_api.py  test_monitoring.py  test_p2p.py  test_placeholder.py  test_prepare_mnist.py  (+7 more)
utils/: monitor_api.py  monitoring.py  training_controller.py
web/: package-lock.json  package.json  tsconfig.json
提交材料_20260622/: 团队分工说明.md  项目工作总结.md
(+38 files in other folders)
